# ComfyUI_FL-SongGen

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
codeclm/models/: codeclm.py  levo.py  lm_levo.py
codeclm/models/llama/: modeling_llama.py
codeclm/modules/: conditioners.py
fl_nodes/: __init__.py  advanced_generate.py  audio_separator.py  auto_style.py  description_builder.py  generate.py  lyrics_formatter.py  model_loader.py  style_transfer.py
fl_utils/: __init__.py  audio_utils.py  logging.py  model_manager.py  paths.py  songgen_wrapper.py
workflows/: Example.json
